src/parser.yxx
/**
 * \file parser.yxx
 * \brief Implementation of a parser grammar for the algo language
 * \author Matthieu Perrin 
 * \version 1
 * \date 17-02-2025
 */



%{
#include "ast.hpp"
extern FILE *yyin;
Program* program;
int yyparse();
int yylex (void);
void yyerror (char const *);
std::vector<std::pair<const Expression*, const Instruction*>>
convertElseIf(const std::vector<std::pair<Expression*, Sequence*>>& vec) {
    std::vector<std::pair<const Expression*, const Instruction*>> result;
    for (const auto& p : vec) {
        // Assuming Sequence is convertible to Instruction
        result.push_back({ p.first, p.second });
    }
    return result;
}

%}

// Tokens used to communicate between the lexer and the parser
// Returned by the lexer, and used as terminal symbols by the parser
%token  ALGORITHME VARIABLES TYPE DEBUT FIN
%token  SI ALORS SINON TANT QUE POUR FAIRE ALLANT DE AVEC UN PAS A SINONSI TOUT DANS
%token  AFFECTATION PT_VIRGULE DEUX_POINTS PARENTHESE_G PARENTHESE_D CROCHET_G CROCHET_D VIRGULE
%token  PLUS MOINS MULTIPLIE ET OU EGAL INFERIEUR
%token  LITTERAL ID ECRIRE LONGUEUR LIRE NON  TABLEAU_TYPE TABLEAU_CTOR
%token FONCTION PROCEDURE RETOURNER



// Ensure SINONSI gets a higher precedence
%nonassoc CROCHET_G CROCHET_D
%left SINON 
%left SINONSI 
%right ALORS
%nonassoc LONGUEUR
%nonassoc FERMETURE_LONGUEUR
%right AFFECTATION


			
// Declaration of the types returned by the actions of the non-terminals
%union {
    Instruction* instruction;
    Expression* expression;
    Sequence* sequence;
    algo_types* type;
    std::string* identifier;
    std::vector<Declaration*>* declaration;
    std::vector<Expression*>* expression_list;
    std::vector<std::pair<Expression*, Sequence*>>* elseIfList;  
    std::vector<Parameter>* param_list;
}

%type <instruction> fonction_definition procedure_definition retour
%type <instruction> commande 
%type <expression> LITTERAL expression disjonction conjonction comparison somme produit oppose terme negation longueur_expr longueur_terme array_creation array_access 
%type <sequence> sequence 
%type <type> type TYPE primitive_type
%type <identifier> ID
%type <declaration> var_declaration
%type <expression_list> expression_list array_dimensions 
%type <sequence> opt_sinon
%type <elseIfList> autres_conditions
%type <elseIfList> opt_autres_conditions
%type <param_list> param_list param_list_nonvide




// Initial rule of the grammar
%start algo

%%



algo:		ALGORITHME VARIABLES var_declaration DEBUT sequence FIN { program = new Program(*$3, $5); delete $3; }
;

/*
var_declaration:                                                        { $$ = new std::vector<Declaration*>(); }
	|	var_declaration ID DEUX_POINTS TYPE                     { $$ = $1; $$->push_back(new Declaration(*$2, $4)); delete $2; }
;
*/

var_declaration:
    { $$ = new std::vector<Declaration*>(); }
    | var_declaration ID DEUX_POINTS type {
        std::cerr << "parser: Declaring " << *$2 << " as ";
        if ($4->kind == algo_types::ARRAY) {
            std::cerr << "array of ";
            // Recursive type printing for nested arrays
            const algo_types* current = $4;
            while (current->kind == algo_types::ARRAY && !current->parameters.empty()) {
                current = &current->parameters[0];
            }
            std::cerr << current->to_string();  // Implement this method
        } else {
            std::cerr << $4->to_string();
        }
        std::cerr << "\n";

        $$ = $1;
        $$->push_back(new Declaration(*$2, *$4));
        delete $2;
        delete $4;
    }
;

primitive_type:
    TYPE { $$ = $1; }
;


type:
    primitive_type { $$ = $1; }
    | TABLEAU_TYPE type { 
          $$ = new algo_types(algo_types::ARRAY, {*$2});
          delete $2;
      }
;

sequence:	                                                        { $$ = new Sequence(); }
	|	sequence commande                                       { $$ = $1; $$->instructions.push_back($2); }
;

expression_list:
    expression                              { $$ = new std::vector<Expression*>(); $$->push_back($1); }
    | expression_list VIRGULE expression    { $$ = $1; $$->push_back($3); }
;

autres_conditions:
    SINONSI expression ALORS sequence autres_conditions 
    { 
        if ($5 == nullptr) {
            $5 = new std::vector<std::pair<Expression*, Sequence*>>();
        }
        $5->push_back(std::make_pair($2, $4));
        $$ = $5;
    }
    | SINONSI expression ALORS sequence 
    { 
        $$ = new std::vector<std::pair<Expression*, Sequence*>>();
        $$->push_back(std::make_pair($2, $4));
    }
;
opt_autres_conditions:
    autres_conditions { $$ = $1; }  // Clauses sinonsi présentes
    | /* vide */      { $$ = new std::vector<std::pair<Expression*, Sequence*>>(); }  // Aucune clause sinonsi
;

opt_sinon:
    SINON sequence { $$ = $2; }  // Bloc SINON présent
    | /* vide */   { $$ = nullptr; }  // Pas de SINON
;

fonction_definition:
    FONCTION ID PARENTHESE_G param_list PARENTHESE_D DEUX_POINTS type DEBUT sequence FIN FONCTION {
        $$ = new FunctionDefinition(*$2, *$4, *$7, $9);
        delete $2; delete $4; delete $7;
    }
;

procedure_definition:
    PROCEDURE ID PARENTHESE_G param_list PARENTHESE_D DEBUT sequence FIN PROCEDURE {
        $$ = new ProcedureDefinition(*$2, *$4, $7);
        delete $2; delete $4;
    }
;

param_list:
    /* vide */ { $$ = new std::vector<Parameter>(); }
    | param_list_nonvide { $$ = $1; }
;

param_list_nonvide:
    ID DEUX_POINTS type {
        $$ = new std::vector<Parameter>();
        $$->push_back(Parameter(*$1, *$3));
        delete $1; delete $3;
    }
    | param_list_nonvide VIRGULE ID DEUX_POINTS type {
        $$ = $1;
        $$->push_back(Parameter(*$3, *$5));
        delete $3; delete $5;
    }
;

retour:
    RETOURNER expression PT_VIRGULE {
        $$ = new Return($2);
    }
;

commande:
    
    
      array_access AFFECTATION array_creation PT_VIRGULE %prec AFFECTATION {
    // build the AST node—no program calls here!
      ArrayAccess* aa = static_cast<ArrayAccess*>($1);
      ArrayCreation* ac = static_cast<ArrayCreation*>($3);

      $$ = new ArrayAssignment(aa->array, aa->indices, ac);

      // avoid double‑free of the ArrayAccess shell
      aa->array = nullptr;
      aa->indices.clear();
      delete aa;
    }
    | array_access AFFECTATION expression PT_VIRGULE {
    	ArrayAccess* aa = static_cast<ArrayAccess*>($1);
    	$$ = new ArrayAssignment(aa->array, aa->indices, $3);
    	aa->array = nullptr;
    	aa->indices.clear();
    	delete aa;
}
    | fonction_definition
    | procedure_definition
    | retour
    | ID AFFECTATION expression PT_VIRGULE                { $$ = new Assignment(*$1, $3); delete $1; }
    | ECRIRE PARENTHESE_G expression_list PARENTHESE_D PT_VIRGULE  { $$ = new Write(*$3); }
    | LIRE ID PT_VIRGULE                               { $$ = new Read(*$2); delete $2; }
    | SI expression ALORS sequence opt_autres_conditions opt_sinon FIN SI { $$ = new If($2, $4, convertElseIf(*$5), $6); }
    | TANT QUE expression FAIRE sequence FIN TANT QUE   { $$ = new While($3, $5); }
    | POUR ID ALLANT DE expression A expression AVEC UN PAS DE expression FAIRE sequence FIN POUR { $$ = new For(*$2, $5, $7, $12, $14); } //ceci concerne indice choisit par utilisateur
    | POUR TOUT ID DANS ID FAIRE sequence FIN POUR { $$ = new ForEach(*$3, *$5, $7); delete $3; delete $5; }
    | POUR ID ALLANT DE expression A expression FAIRE sequence FIN POUR { $$ = new For(*$2, $5, $7, new Literal(algo_types::INTEGER, "1") , $9); } 
    | ID AFFECTATION array_creation PT_VIRGULE {
      	// look up T’s declared type in your var_declaration list:
      ArrayCreation* ac = static_cast<ArrayCreation*>($3);
       $$ = new Assignment(*$1, ac);
        delete $1;
    }
;

longueur_expr:
    LONGUEUR PARENTHESE_G expression PARENTHESE_D
        { $$ = new UnaryOperation(UnaryOperation::LONGUEUR, $3); }
;

longueur_terme:
	LONGUEUR PARENTHESE_G terme PARENTHESE_D %prec FERMETURE_LONGUEUR	{ $$ = new UnaryOperation(UnaryOperation::LONGUEUR, $3); }
;

/* Array Creation */
array_creation: 
    TABLEAU_CTOR PARENTHESE_G array_dimensions PARENTHESE_D 
    { 
        algo_types array_type = algo_types(algo_types::INTEGER);  // default, adjust according to context later!
        $$ = new ArrayCreation(array_type, *$3);
        delete $3; 
    }
;


array_dimensions:
    expression { $$ = new std::vector<Expression*>(); $$->push_back($1); }
;

/* Array Access */
array_access:
    expression CROCHET_G expression CROCHET_D 
    { 
        $$ = new ArrayAccess($1, std::vector<Expression*>{ $3 });
    }
    | array_access CROCHET_G expression CROCHET_D 
    { 
        // Cast $1 to ArrayAccess* to access the 'indices' field.
        ArrayAccess* aa = static_cast<ArrayAccess*>($1);
        aa->indices.push_back($3);
        $$ = $1; 
    }
;



expression: disjonction { std::cerr << "Parser: Processing expression\n" ; $$ = $1; }
    | array_creation
    | array_access
    | longueur_expr
;

disjonction: disjonction OU conjonction { std::cerr << "Parser: Processing OU\n"; $$ = new BinaryOperation(BinaryOperation::OU, $1, $3); }
           | conjonction { std::cerr << "Parser: Processing conjonction\n"; $$ = $1; }
;

conjonction: conjonction ET negation { std::cerr << "Parser: Processing ET\n"; $$ = new BinaryOperation(BinaryOperation::ET, $1, $3); }
           | negation { std::cerr << "Parser: Processing negation\n"; $$ = $1; }
;

negation: NON negation { std::cerr << "Parser: Processing NON\n"; $$ = new UnaryOperation(UnaryOperation::NON, $2); }
        | comparison { std::cerr << "Parser: Processing comparison\n"; $$ = $1; }
;

comparison:	somme EGAL somme				        { $$ = new BinaryOperation(BinaryOperation::EGAL, $1, $3); }
	|	somme INFERIEUR somme				        { $$ = new BinaryOperation(BinaryOperation::INFERIEUR, $1, $3); }
	|	somme						        { $$ = $1; }
;

somme:		somme PLUS produit				        { $$ = new BinaryOperation(BinaryOperation::PLUS, $1, $3); }
	|	somme MOINS produit				        { $$ = new BinaryOperation(BinaryOperation::MOINS, $1, $3); }
	|	produit						        { $$ = $1; }
;

produit:	produit MULTIPLIE terme				        { $$ = new BinaryOperation(BinaryOperation::FOIS, $1, $3); }
	|	oppose						        { $$ = $1; }
;

oppose:		MOINS oppose					        { $$ = new UnaryOperation(UnaryOperation::MOINS, $2); }
	|	terme				                        { $$ = $1; }
;



terme:		LITTERAL				                { $$ = $1; }
	|	ID				                        { $$ = new Identifier(*$1); delete $1;}
	|	longueur_terme
	|	PARENTHESE_G expression PARENTHESE_D                    { $$ = $2; }
	|	array_access
;

%%

void yyerror(const char *s) {
  printf("%s\n",s);
}

int main(int, char *argv[]) {
  //extern int yydebug;
  //yydebug = 1;
  yyin=fopen(argv[1],"r");
  yyparse();

  if(program && program->validate()) {
      std::cout << program->cpp_code();
      return 0;
  } else return 1;
}
