src/parser.output
État 27 conflits: 1 décalage/réduction
État 37 conflits: 1 décalage/réduction
État 43 conflits: 1 décalage/réduction
État 73 conflits: 1 décalage/réduction
État 78 conflits: 2 décalage/réduction


Grammaire

    0 $accept: algo $end

    1 algo: ALGORITHME VARIABLES var_declaration DEBUT sequence FIN

    2 var_declaration: %empty
    3                | var_declaration ID DEUX_POINTS type

    4 primitive_type: TYPE

    5 type: primitive_type
    6     | TABLEAU_TYPE type

    7 sequence: %empty
    8         | sequence commande

    9 expression_list: expression
   10                | expression_list VIRGULE expression

   11 autres_conditions: SINONSI expression ALORS sequence autres_conditions
   12                  | SINONSI expression ALORS sequence

   13 opt_autres_conditions: autres_conditions
   14                      | %empty

   15 opt_sinon: SINON sequence
   16          | %empty

   17 commande: ID AFFECTATION expression PT_VIRGULE
   18         | ECRIRE PARENTHESE_G expression_list PARENTHESE_D PT_VIRGULE
   19         | LIRE ID PT_VIRGULE
   20         | SI expression ALORS sequence opt_autres_conditions opt_sinon FIN SI
   21         | TANT QUE expression FAIRE sequence FIN TANT QUE
   22         | POUR ID ALLANT DE expression A expression AVEC UN PAS DE expression FAIRE sequence FIN POUR
   23         | POUR ID ALLANT DE expression A expression FAIRE sequence FIN POUR
   24         | ID AFFECTATION array_creation PT_VIRGULE
   25         | array_access AFFECTATION array_creation PT_VIRGULE

   26 longueur_expr: LONGUEUR PARENTHESE_G expression PARENTHESE_D

   27 longueur_terme: LONGUEUR PARENTHESE_G terme PARENTHESE_D

   28 array_creation: TABLEAU_CTOR PARENTHESE_G array_dimensions PARENTHESE_D

   29 array_dimensions: expression

   30 array_access: expression CROCHET_G expression CROCHET_D
   31             | array_access CROCHET_G expression CROCHET_D

   32 expression: disjonction
   33           | array_creation
   34           | array_access
   35           | longueur_expr

   36 disjonction: disjonction OU conjonction
   37            | conjonction

   38 conjonction: conjonction ET negation
   39            | negation

   40 negation: NON negation
   41         | comparison

   42 comparison: somme EGAL somme
   43           | somme INFERIEUR somme
   44           | somme

   45 somme: somme PLUS produit
   46      | somme MOINS produit
   47      | produit

   48 produit: produit MULTIPLIE terme
   49        | oppose

   50 oppose: MOINS oppose
   51       | indice

   52 indice: terme CROCHET_G expression CROCHET_D
   53       | terme

   54 terme: LITTERAL
   55      | ID
   56      | longueur_terme
   57      | PARENTHESE_G expression PARENTHESE_D


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    ALGORITHME (258) 1
    VARIABLES (259) 1
    TYPE <type> (260) 4
    DEBUT (261) 1
    FIN (262) 1 20 21 22 23
    SI (263) 20
    ALORS (264) 11 12 20
    SINON (265) 15
    TANT (266) 21
    QUE (267) 21
    POUR (268) 22 23
    FAIRE (269) 21 22 23
    ALLANT (270) 22 23
    DE (271) 22 23
    AVEC (272) 22
    UN (273) 22
    PAS (274) 22
    A (275) 22 23
    SINONSI (276) 11 12
    AFFECTATION (277) 17 24 25
    PT_VIRGULE (278) 17 18 19 24 25
    DEUX_POINTS (279) 3
    PARENTHESE_G (280) 18 26 27 28 57
    PARENTHESE_D (281) 18 26 27 28 57
    CROCHET_G (282) 30 31 52
    CROCHET_D (283) 30 31 52
    VIRGULE (284) 10
    PLUS (285) 45
    MOINS (286) 46 50
    MULTIPLIE (287) 48
    ET (288) 38
    OU (289) 36
    EGAL (290) 42
    INFERIEUR (291) 43
    LITTERAL <expression> (292) 54
    ID <identifier> (293) 3 17 19 22 23 24 55
    ECRIRE (294) 18
    LONGUEUR (295) 26 27
    LIRE (296) 19
    NON (297) 40
    TABLEAU_TYPE (298) 6
    TABLEAU_CTOR (299) 28
    FERMETURE_LONGUEUR (300)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (46)
        à gauche: 0
    algo (47)
        à gauche: 1
        à droite: 0
    var_declaration <declaration> (48)
        à gauche: 2 3
        à droite: 1 3
    primitive_type <type> (49)
        à gauche: 4
        à droite: 5
    type <type> (50)
        à gauche: 5 6
        à droite: 3 6
    sequence <sequence> (51)
        à gauche: 7 8
        à droite: 1 8 11 12 15 20 21 22 23
    expression_list <expression_list> (52)
        à gauche: 9 10
        à droite: 10 18
    autres_conditions <elseIfList> (53)
        à gauche: 11 12
        à droite: 11 13
    opt_autres_conditions <elseIfList> (54)
        à gauche: 13 14
        à droite: 20
    opt_sinon <sequence> (55)
        à gauche: 15 16
        à droite: 20
    commande <instruction> (56)
        à gauche: 17 18 19 20 21 22 23 24 25
        à droite: 8
    longueur_expr <expression> (57)
        à gauche: 26
        à droite: 35
    longueur_terme <expression> (58)
        à gauche: 27
        à droite: 56
    array_creation <expression> (59)
        à gauche: 28
        à droite: 24 25 33
    array_dimensions <expression_list> (60)
        à gauche: 29
        à droite: 28
    array_access <expression> (61)
        à gauche: 30 31
        à droite: 25 31 34
    expression <expression> (62)
        à gauche: 32 33 34 35
        à droite: 9 10 11 12 17 20 21 22 23 26 29 30 31 52 57
    disjonction <expression> (63)
        à gauche: 36 37
        à droite: 32 36
    conjonction <expression> (64)
        à gauche: 38 39
        à droite: 36 37 38
    negation <expression> (65)
        à gauche: 40 41
        à droite: 38 39 40
    comparison <expression> (66)
        à gauche: 42 43 44
        à droite: 41
    somme <expression> (67)
        à gauche: 45 46 47
        à droite: 42 43 44 45 46
    produit <expression> (68)
        à gauche: 48 49
        à droite: 45 46 47 48
    oppose <expression> (69)
        à gauche: 50 51
        à droite: 49 50
    indice <expression> (70)
        à gauche: 52 53
        à droite: 51
    terme <expression> (71)
        à gauche: 54 55 56 57
        à droite: 27 48 52 53


État 0

    0 $accept: . algo $end

    ALGORITHME  décalage et aller à l'état 1

    algo  aller à l'état 2


État 1

    1 algo: ALGORITHME . VARIABLES var_declaration DEBUT sequence FIN

    VARIABLES  décalage et aller à l'état 3


État 2

    0 $accept: algo . $end

    $end  décalage et aller à l'état 4


État 3

    1 algo: ALGORITHME VARIABLES . var_declaration DEBUT sequence FIN

    $défaut  réduction par utilisation de la règle 2 (var_declaration)

    var_declaration  aller à l'état 5


État 4

    0 $accept: algo $end .

    $défaut  accepter


État 5

    1 algo: ALGORITHME VARIABLES var_declaration . DEBUT sequence FIN
    3 var_declaration: var_declaration . ID DEUX_POINTS type

    DEBUT  décalage et aller à l'état 6
    ID     décalage et aller à l'état 7


État 6

    1 algo: ALGORITHME VARIABLES var_declaration DEBUT . sequence FIN

    $défaut  réduction par utilisation de la règle 7 (sequence)

    sequence  aller à l'état 8


État 7

    3 var_declaration: var_declaration ID . DEUX_POINTS type

    DEUX_POINTS  décalage et aller à l'état 9


État 8

    1 algo: ALGORITHME VARIABLES var_declaration DEBUT sequence . FIN
    8 sequence: sequence . commande

    FIN           décalage et aller à l'état 10
    SI            décalage et aller à l'état 11
    TANT          décalage et aller à l'état 12
    POUR          décalage et aller à l'état 13
    PARENTHESE_G  décalage et aller à l'état 14
    MOINS         décalage et aller à l'état 15
    LITTERAL      décalage et aller à l'état 16
    ID            décalage et aller à l'état 17
    ECRIRE        décalage et aller à l'état 18
    LONGUEUR      décalage et aller à l'état 19
    LIRE          décalage et aller à l'état 20
    NON           décalage et aller à l'état 21
    TABLEAU_CTOR  décalage et aller à l'état 22

    commande        aller à l'état 23
    longueur_expr   aller à l'état 24
    longueur_terme  aller à l'état 25
    array_creation  aller à l'état 26
    array_access    aller à l'état 27
    expression      aller à l'état 28
    disjonction     aller à l'état 29
    conjonction     aller à l'état 30
    negation        aller à l'état 31
    comparison      aller à l'état 32
    somme           aller à l'état 33
    produit         aller à l'état 34
    oppose          aller à l'état 35
    indice          aller à l'état 36
    terme           aller à l'état 37


État 9

    3 var_declaration: var_declaration ID DEUX_POINTS . type

    TYPE          décalage et aller à l'état 38
    TABLEAU_TYPE  décalage et aller à l'état 39

    primitive_type  aller à l'état 40
    type            aller à l'état 41


État 10

    1 algo: ALGORITHME VARIABLES var_declaration DEBUT sequence FIN .

    $défaut  réduction par utilisation de la règle 1 (algo)


État 11

   20 commande: SI . expression ALORS sequence opt_autres_conditions opt_sinon FIN SI

    PARENTHESE_G  décalage et aller à l'état 14
    MOINS         décalage et aller à l'état 15
    LITTERAL      décalage et aller à l'état 16
    ID            décalage et aller à l'état 42
    LONGUEUR      décalage et aller à l'état 19
    NON           décalage et aller à l'état 21
    TABLEAU_CTOR  décalage et aller à l'état 22

    longueur_expr   aller à l'état 24
    longueur_terme  aller à l'état 25
    array_creation  aller à l'état 26
    array_access    aller à l'état 43
    expression      aller à l'état 44
    disjonction     aller à l'état 29
    conjonction     aller à l'état 30
    negation        aller à l'état 31
    comparison      aller à l'état 32
    somme           aller à l'état 33
    produit         aller à l'état 34
    oppose          aller à l'état 35
    indice          aller à l'état 36
    terme           aller à l'état 37


État 12

   21 commande: TANT . QUE expression FAIRE sequence FIN TANT QUE

    QUE  décalage et aller à l'état 45


État 13

   22 commande: POUR . ID ALLANT DE expression A expression AVEC UN PAS DE expression FAIRE sequence FIN POUR
   23         | POUR . ID ALLANT DE expression A expression FAIRE sequence FIN POUR

    ID  décalage et aller à l'état 46


État 14

   57 terme: PARENTHESE_G . expression PARENTHESE_D

    PARENTHESE_G  décalage et aller à l'état 14
    MOINS         décalage et aller à l'état 15
    LITTERAL      décalage et aller à l'état 16
    ID            décalage et aller à l'état 42
    LONGUEUR      décalage et aller à l'état 19
    NON           décalage et aller à l'état 21
    TABLEAU_CTOR  décalage et aller à l'état 22

    longueur_expr   aller à l'état 24
    longueur_terme  aller à l'état 25
    array_creation  aller à l'état 26
    array_access    aller à l'état 43
    expression      aller à l'état 47
    disjonction     aller à l'état 29
    conjonction     aller à l'état 30
    negation        aller à l'état 31
    comparison      aller à l'état 32
    somme           aller à l'état 33
    produit         aller à l'état 34
    oppose          aller à l'état 35
    indice          aller à l'état 36
    terme           aller à l'état 37


État 15

   50 oppose: MOINS . oppose

    PARENTHESE_G  décalage et aller à l'état 14
    MOINS         décalage et aller à l'état 15
    LITTERAL      décalage et aller à l'état 16
    ID            décalage et aller à l'état 42
    LONGUEUR      décalage et aller à l'état 48

    longueur_terme  aller à l'état 25
    oppose          aller à l'état 49
    indice          aller à l'état 36
    terme           aller à l'état 37


État 16

   54 terme: LITTERAL .

    $défaut  réduction par utilisation de la règle 54 (terme)


État 17

   17 commande: ID . AFFECTATION expression PT_VIRGULE
   24         | ID . AFFECTATION array_creation PT_VIRGULE
   55 terme: ID .

    AFFECTATION  décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 55 (terme)


État 18

   18 commande: ECRIRE . PARENTHESE_G expression_list PARENTHESE_D PT_VIRGULE

    PARENTHESE_G  décalage et aller à l'état 51


État 19

   26 longueur_expr: LONGUEUR . PARENTHESE_G expression PARENTHESE_D
   27 longueur_terme: LONGUEUR . PARENTHESE_G terme PARENTHESE_D

    PARENTHESE_G  décalage et aller à l'état 52


État 20

   19 commande: LIRE . ID PT_VIRGULE

    ID  décalage et aller à l'état 53


État 21

   40 negation: NON . negation

    PARENTHESE_G  décalage et aller à l'état 14
    MOINS         décalage et aller à l'état 15
    LITTERAL      décalage et aller à l'état 16
    ID            décalage et aller à l'état 42
    LONGUEUR      décalage et aller à l'état 48
    NON           décalage et aller à l'état 21

    longueur_terme  aller à l'état 25
    negation        aller à l'état 54
    comparison      aller à l'état 32
    somme           aller à l'état 33
    produit         aller à l'état 34
    oppose          aller à l'état 35
    indice          aller à l'état 36
    terme           aller à l'état 37


État 22

   28 array_creation: TABLEAU_CTOR . PARENTHESE_G array_dimensions PARENTHESE_D

    PARENTHESE_G  décalage et aller à l'état 55


État 23

    8 sequence: sequence commande .

    $défaut  réduction par utilisation de la règle 8 (sequence)


État 24

   35 expression: longueur_expr .

    $défaut  réduction par utilisation de la règle 35 (expression)


État 25

   56 terme: longueur_terme .

    $défaut  réduction par utilisation de la règle 56 (terme)


État 26

   33 expression: array_creation .

    $défaut  réduction par utilisation de la règle 33 (expression)


État 27

   25 commande: array_access . AFFECTATION array_creation PT_VIRGULE
   31 array_access: array_access . CROCHET_G expression CROCHET_D
   34 expression: array_access .

    AFFECTATION  décalage et aller à l'état 56
    CROCHET_G    décalage et aller à l'état 57

    CROCHET_G  [réduction par utilisation de la règle 34 (expression)]


État 28

   30 array_access: expression . CROCHET_G expression CROCHET_D

    CROCHET_G  décalage et aller à l'état 58


État 29

   32 expression: disjonction .
   36 disjonction: disjonction . OU conjonction

    OU  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 32 (expression)


État 30

   37 disjonction: conjonction .
   38 conjonction: conjonction . ET negation

    ET  décalage et aller à l'état 60

    $défaut  réduction par utilisation de la règle 37 (disjonction)


État 31

   39 conjonction: negation .

    $défaut  réduction par utilisation de la règle 39 (conjonction)


État 32

   41 negation: comparison .

    $défaut  réduction par utilisation de la règle 41 (negation)


État 33

   42 comparison: somme . EGAL somme
   43           | somme . INFERIEUR somme
   44           | somme .
   45 somme: somme . PLUS produit
   46      | somme . MOINS produit

    PLUS       décalage et aller à l'état 61
    MOINS      décalage et aller à l'état 62
    EGAL       décalage et aller à l'état 63
    INFERIEUR  décalage et aller à l'état 64

    $défaut  réduction par utilisation de la règle 44 (comparison)


État 34

   47 somme: produit .
   48 produit: produit . MULTIPLIE terme

    MULTIPLIE  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 47 (somme)


État 35

   49 produit: oppose .

    $défaut  réduction par utilisation de la règle 49 (produit)


État 36

   51 oppose: indice .

    $défaut  réduction par utilisation de la règle 51 (oppose)


État 37

   52 indice: terme . CROCHET_G expression CROCHET_D
   53       | terme .

    CROCHET_G  décalage et aller à l'état 66

    CROCHET_G  [réduction par utilisation de la règle 53 (indice)]
    $défaut   réduction par utilisation de la règle 53 (indice)


État 38

    4 primitive_type: TYPE .

    $défaut  réduction par utilisation de la règle 4 (primitive_type)


État 39

    6 type: TABLEAU_TYPE . type

    TYPE          décalage et aller à l'état 38
    TABLEAU_TYPE  décalage et aller à l'état 39

    primitive_type  aller à l'état 40
    type            aller à l'état 67


État 40

    5 type: primitive_type .

    $défaut  réduction par utilisation de la règle 5 (type)


État 41

    3 var_declaration: var_declaration ID DEUX_POINTS type .

    $défaut  réduction par utilisation de la règle 3 (var_declaration)


État 42

   55 terme: ID .

    $défaut  réduction par utilisation de la règle 55 (terme)


État 43

   31 array_access: array_access . CROCHET_G expression CROCHET_D
   34 expression: array_access .

    CROCHET_G  décalage et aller à l'état 57

    CROCHET_G  [réduction par utilisation de la règle 34 (expression)]
    $défaut   réduction par utilisation de la règle 34 (expression)


État 44

   20 commande: SI expression . ALORS sequence opt_autres_conditions opt_sinon FIN SI
   30 array_access: expression . CROCHET_G expression CROCHET_D

    ALORS      décalage et aller à l'état 68
    CROCHET_G  décalage et aller à l'état 58


État 45

   21 commande: TANT QUE . expression FAIRE sequence FIN TANT QUE

    PARENTHESE_G  décalage et aller à l'état 14
    MOINS         décalage et aller à l'état 15
    LITTERAL      décalage et aller à l'état 16
    ID            décalage et aller à l'état 42
    LONGUEUR      décalage et aller à l'état 19
    NON           décalage et aller à l'état 21
    TABLEAU_CTOR  décalage et aller à l'état 22

    longueur_expr   aller à l'état 24
    longueur_terme  aller à l'état 25
    array_creation  aller à l'état 26
    array_access    aller à l'état 43
    expression      aller à l'état 69
    disjonction     aller à l'état 29
    conjonction     aller à l'état 30
    negation        aller à l'état 31
    comparison      aller à l'état 32
    somme           aller à l'état 33
    produit         aller à l'état 34
    oppose          aller à l'état 35
    indice          aller à l'état 36
    terme           aller à l'état 37


État 46

   22 commande: POUR ID . ALLANT DE expression A expression AVEC UN PAS DE expression FAIRE sequence FIN POUR
   23         | POUR ID . ALLANT DE expression A expression FAIRE sequence FIN POUR

    ALLANT  décalage et aller à l'état 70


État 47

   30 array_access: expression . CROCHET_G expression CROCHET_D
   57 terme: PARENTHESE_G expression . PARENTHESE_D

    PARENTHESE_D  décalage et aller à l'état 71
    CROCHET_G     décalage et aller à l'état 58


État 48

   27 longueur_terme: LONGUEUR . PARENTHESE_G terme PARENTHESE_D

    PARENTHESE_G  décalage et aller à l'état 72


État 49

   50 oppose: MOINS oppose .

    $défaut  réduction par utilisation de la règle 50 (oppose)


État 50

   17 commande: ID AFFECTATION . expression PT_VIRGULE
   24         | ID AFFECTATION . array_creation PT_VIRGULE

    PARENTHESE_G  décalage et aller à l'état 14
    MOINS         décalage et aller à l'état 15
    LITTERAL      décalage et aller à l'état 16
    ID            décalage et aller à l'état 42
    LONGUEUR      décalage et aller à l'état 19
    NON           décalage et aller à l'état 21
    TABLEAU_CTOR  décalage et aller à l'état 22

    longueur_expr   aller à l'état 24
    longueur_terme  aller à l'état 25
    array_creation  aller à l'état 73
    array_access    aller à l'état 43
    expression      aller à l'état 74
    disjonction     aller à l'état 29
    conjonction     aller à l'état 30
    negation        aller à l'état 31
    comparison      aller à l'état 32
    somme           aller à l'état 33
    produit         aller à l'état 34
    oppose          aller à l'état 35
    indice          aller à l'état 36
    terme           aller à l'état 37


État 51

   18 commande: ECRIRE PARENTHESE_G . expression_list PARENTHESE_D PT_VIRGULE

    PARENTHESE_G  décalage et aller à l'état 14
    MOINS         décalage et aller à l'état 15
    LITTERAL      décalage et aller à l'état 16
    ID            décalage et aller à l'état 42
    LONGUEUR      décalage et aller à l'état 19
    NON           décalage et aller à l'état 21
    TABLEAU_CTOR  décalage et aller à l'état 22

    expression_list  aller à l'état 75
    longueur_expr    aller à l'état 24
    longueur_terme   aller à l'état 25
    array_creation   aller à l'état 26
    array_access     aller à l'état 43
    expression       aller à l'état 76
    disjonction      aller à l'état 29
    conjonction      aller à l'état 30
    negation         aller à l'état 31
    comparison       aller à l'état 32
    somme            aller à l'état 33
    produit          aller à l'état 34
    oppose           aller à l'état 35
    indice           aller à l'état 36
    terme            aller à l'état 37


État 52

   26 longueur_expr: LONGUEUR PARENTHESE_G . expression PARENTHESE_D
   27 longueur_terme: LONGUEUR PARENTHESE_G . terme PARENTHESE_D

    PARENTHESE_G  décalage et aller à l'état 14
    MOINS         décalage et aller à l'état 15
    LITTERAL      décalage et aller à l'état 16
    ID            décalage et aller à l'état 42
    LONGUEUR      décalage et aller à l'état 19
    NON           décalage et aller à l'état 21
    TABLEAU_CTOR  décalage et aller à l'état 22

    longueur_expr   aller à l'état 24
    longueur_terme  aller à l'état 25
    array_creation  aller à l'état 26
    array_access    aller à l'état 43
    expression      aller à l'état 77
    disjonction     aller à l'état 29
    conjonction     aller à l'état 30
    negation        aller à l'état 31
    comparison      aller à l'état 32
    somme           aller à l'état 33
    produit         aller à l'état 34
    oppose          aller à l'état 35
    indice          aller à l'état 36
    terme           aller à l'état 78


État 53

   19 commande: LIRE ID . PT_VIRGULE

    PT_VIRGULE  décalage et aller à l'état 79


État 54

   40 negation: NON negation .

    $défaut  réduction par utilisation de la règle 40 (negation)


État 55

   28 array_creation: TABLEAU_CTOR PARENTHESE_G . array_dimensions PARENTHESE_D

    PARENTHESE_G  décalage et aller à l'état 14
    MOINS         décalage et aller à l'état 15
    LITTERAL      décalage et aller à l'état 16
    ID            décalage et aller à l'état 42
    LONGUEUR      décalage et aller à l'état 19
    NON           décalage et aller à l'état 21
    TABLEAU_CTOR  décalage et aller à l'état 22
